--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "df = pd.read_csv()\n"
    ]
   },
   {
@@ -63,14 +63,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gmaps.configure(api_key=gkey)\n",
+    "\n",
+    "locations = airport_df[[\"Lat\", \"Lng\"]]\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Plot Heatmap\n",
+    "fig = gmaps.figure()\n",
+    "\n",
+    "# Create heat layer\n",
+    "heat_layer1 = gmaps.heatmap_layer(locations, weights=humidity, \n",
+    "                                 dissipating=False, max_intensity=10,\n",
+    "                                 point_radius=1)\n",
+    "\n",
+    "# Add layer\n",
+    "fig.add_layer(heat_layer1)\n",
+    "\n",
+    "# Display figure\n",
+    "fig"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -86,7 +104,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.DataFrame()\n",
+    "df.dropna()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -106,7 +127,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "hotel_df = [['Hotel Name']]"
+   ]
   },
   {
    "cell_type": "code",
@@ -159,9 +182,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pydev",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "pydev"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -173,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.9.7"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
