--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -34,7 +34,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -314,7 +316,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "554baaf34a464acf8dfe278e0300e1eb",
+       "model_id": "0a9e52bd980544fdb1f4054053da7bb0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -332,8 +334,8 @@
     "\n",
     "# Create heat layer\n",
     "heat_layer = gmaps.heatmap_layer(locations, weights=humidity, \n",
-    "                                 dissipating=False, max_intensity=10,\n",
-    "                                 point_radius=1)\n",
+    "                                 dissipating=False, max_intensity=300,\n",
+    "                                 point_radius=5)\n",
     "\n",
     "# Add layer\n",
     "fig.add_layer(heat_layer)\n",
@@ -353,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -580,14 +582,16 @@
        "[580 rows x 11 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#airport_df = pd.DataFrame()\n",
-    "airport_df.dropna()\n",
+    "airport_df[(airport_df[\"Max Temperature\"] < 80) & (airport_df[\"Max Temperature\"] > 70) \\\n",
+    "                                    & (airport_df[\"Wind Speed\"] < 10) \\\n",
+    "                                    & (airport_df[\"Cloudiness\"] == 0)].dropna()\n",
     "airport_df['Hotel Name'] = ''\n",
     "airport_df"
    ]
@@ -607,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +901,7 @@
        "[580 rows x 11 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -940,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -962,13 +966,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "554baaf34a464acf8dfe278e0300e1eb",
+       "model_id": "0a9e52bd980544fdb1f4054053da7bb0",
        "version_major": 2,
        "version_minor": 0
       },
